--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 h1{
 	color: #5FFA82;
 }
@@ -6,6 +5,8 @@ body{
 	font-family: sans-serif;
 	font-size: 12px;
 	text-decoration: all;
+	background-repeat: "https://i.ytimg.com/vi/tYBk4kLHPkk/maxresdefault.jpg";
+}
 
 }
 h2{
@@ -29,5 +30,12 @@ border: 1px solid black;
 
 .spotlight{
 	background-color: #F4E931;
+}
 
+p, a{
+	background-color:#2CD3DF;
+}
+
+a:hover{
+	text-transform: uppercase;
 }
